--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
         "@symfony/webpack-encore": "^0.19.0",
         "bootstrap-sass": "^3.3.7",
         "jquery": "^3.3.1",
-        "jqueryui": "^1.11.1"
+        "jqueryui": "^1.11.1",
+        "node-sass": "^4.9.0",
+        "sass-loader": "^7.0.2"
     },
     "license": "UNLICENSED",
     "private": true,
