--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,6 +1,6 @@
 security:
     encoders:
-        App\Entity\User:
+        App\Entity\Usuario:
             algorithm: bcrypt
 
     providers:
@@ -15,12 +15,15 @@ security:
         main:
             anonymous: true
             pattern:    ^/
-            http_basic: ~
-            provider: db_provider
+            logout:
+                path:     /logout
             guard:
                 authenticators:
                     - App\Security\FormAuthenticator
                     - App\Security\TokenAuthenticator
                 entry_point: App\Security\FormAuthenticator
+            logout_on_user_change: true
 
     access_control:
+        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/usuarios, role: IS_AUTHENTICATED_FULLY }
