--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,9 @@
-#index:
-#    path: /
-#    defaults: { _controller: 'App\Controller\DefaultController::index' }
+default:
+    resource: "routes/default.yaml"
+
+security:
+    resource: "routes/security.yaml"
+
+usuario:
+    resource: "routes/usuario.yaml"
+    prefix: /usuarios
