--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,3 +27,4 @@ security:
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/usuarios, role: IS_AUTHENTICATED_FULLY }
+        - { path: ^/admin, role: IS_AUTHENTICATED_FULLY }
