Inicio de pronostico de partidos

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,3 +7,7 @@ security:
 usuario:
     resource: "routes/usuario.yaml"
     prefix: /usuarios
+
+partido_usuario:
+    resource: "routes/partido_usuario.yaml"
+    prefix: /partidos
